--- a/compose.yaml
+++ b/compose.yaml
@@ -1,21 +1,12 @@
-version: '3'
-
+version: "2"
 services:
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-15}-alpine
+  SYMFONY_NOTA_BENE:
+    image: mariadb:latest
+    restart: always
+    ports:
+      - 3306:3306
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-    volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
-
-volumes:
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: nota_bene_database
+      MYSQL_USER: nota_bene_user
+      MYSQL_PASSWORD: unmotdepasse
